--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# sensitive data
+components/blockchain/NFT.Storage/NFT.Storage_key.js
