--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "antd-mask-input": "^0.1.15",
     "axios": "^0.24.0",
     "axios-mock-adapter": "^1.20.0",
+    "babel": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "country-list": "^2.2.0",
     "credit-card-type": "^9.1.0",
     "dayjs": "^1.11.0",
     "echarts": "^5.1.2",
     "echarts-for-react": "^3.0.1",
     "elt-react-credit-cards": "^0.0.1",
+    "ethers": "^6.0.2",
     "google-map-react": "^2.1.10",
     "i18next": "^20.4.0",
+    "ipfs": "^0.66.0",
     "leaflet": "^1.7.1",
     "moment": "^2.29.4",
     "nft.storage": "^7.0.0",
@@ -37,7 +42,7 @@
     "react-i18next": "^11.11.4",
     "react-infinite-scroll-component": "^6.1.0",
     "react-insta-stories": "^2.3.0",
-    "react-leaflet": "next",
+    "react-leaflet": "^3.2.5",
     "react-phone-number-input": "^3.2.17",
     "react-redux": "^7.2.6",
     "react-responsive": "^8.2.0",
@@ -48,6 +53,7 @@
     "react-slick": "^0.28.1",
     "react-trello": "^2.2.11",
     "react-verification-input": "^2.0.3",
+    "readable-stream": "^4.3.0",
     "round-slider": "altence/round-slider#refactor/slider",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
@@ -56,6 +62,7 @@
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
+    "web3": "^1.8.2",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
     "workbox-cacheable-response": "^5.1.3",
