--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@craco/craco": "^6.1.2",
     "@lit-labs/react": "^1.0.2",
     "@reduxjs/toolkit": "^1.7.1",
+    "@truffle/hdwallet-provider": "^2.1.6",
     "antd": "^4.22.4",
     "antd-mask-input": "^0.1.15",
     "axios": "^0.24.0",
     "axios-mock-adapter": "^1.20.0",
-    "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "country-list": "^2.2.0",
@@ -25,12 +25,10 @@
     "echarts": "^5.1.2",
     "echarts-for-react": "^3.0.1",
     "elt-react-credit-cards": "^0.0.1",
-    "ethers": "^6.0.2",
     "google-map-react": "^2.1.10",
     "i18next": "^20.4.0",
-    "ipfs": "^0.66.0",
+    "js-file-download": "^0.4.12",
     "leaflet": "^1.7.1",
-    "moment": "^2.29.4",
     "nft.storage": "^7.0.0",
     "patch-package": "^6.4.7",
     "pigeon-maps": "^0.19.7",
@@ -39,10 +37,10 @@
     "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-i18next": "^11.11.4",
+    "react-i18next": "^12.1.5",
     "react-infinite-scroll-component": "^6.1.0",
     "react-insta-stories": "^2.3.0",
-    "react-leaflet": "^3.2.5",
+    "react-leaflet": "next",
     "react-phone-number-input": "^3.2.17",
     "react-redux": "^7.2.6",
     "react-responsive": "^8.2.0",
@@ -53,7 +51,6 @@
     "react-slick": "^0.28.1",
     "react-trello": "^2.2.11",
     "react-verification-input": "^2.0.3",
-    "readable-stream": "^4.3.0",
     "round-slider": "altence/round-slider#refactor/slider",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
@@ -63,6 +60,7 @@
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.8.2",
+    "web3.storage": "^4.4.0",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
     "workbox-cacheable-response": "^5.1.3",
