--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
     "baseUrl": "./src/",
     "target": "es5",
     "lib": [
+      "ES2020",
+      "ES2020.Promise",
+      "ES2020.String",
+      "ES2020.BigInt",
       "dom",
       "dom.iterable",
       "esnext"
@@ -24,6 +28,6 @@
   },
   "include": [
     "src",
-    "migrations"
+    "migrations/migrations_polygon"
   ]
 }
