--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@craco/craco": "^6.1.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@lit-labs/react": "^1.0.2",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "@reduxjs/toolkit": "^1.7.1",
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@truffle/hdwallet-provider": "^2.1.6",
     "antd": "^4.22.4",
     "antd-mask-input": "^0.1.15",
@@ -36,6 +41,7 @@
     "react": "^17.0.2",
     "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
     "react-i18next": "^12.1.5",
     "react-infinite-scroll-component": "^6.1.0",
@@ -54,10 +60,15 @@
     "round-slider": "altence/round-slider#refactor/slider",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
+    "three": "0.135.0",
+    "three-mesh-bvh": "0.5.5",
     "typeface-lato": "^1.1.13",
     "typeface-montserrat": "^1.1.13",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
+    "web-ifc": "0.0.35",
+    "web-ifc-three": "0.0.117",
+    "web-ifc-viewer": "1.0.134",
     "web-vitals": "^1.0.1",
     "web3": "^1.8.2",
     "web3.storage": "^4.4.0",
@@ -92,6 +103,7 @@
     "not IE 11"
   ],
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/country-list": "^2.1.0",
     "@types/google-map-react": "^2.1.3",
     "@types/leaflet": "^1.7.9",
@@ -104,25 +116,37 @@
     "@types/react-simple-maps": "^1.0.7",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.10",
+    "@types/three": "^0.149.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "copy-webpack-plugin": "^11.0.0",
     "craco-alias": "^3.0.1",
+    "css-loader": "^6.7.3",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^6.0.0",
     "less": "^4.1.2",
     "less-plugin-clean-css": "^1.5.1",
     "lint-staged": "^11.0.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.3.1",
+    "rollup": "^3.15.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
+    "ts-loader": "^9.4.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^5.0.1",
+    "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.0-3"
   },
   "lint-staged": {
