--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           node-version: 16.x  
 
+      - name: Install Yarn
+        run: |
+            npm install -g yarn
+
       - name: Run install
         run: |
           yarn install 
