added color support through 'web-ifc-viewer-bimchain'

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "patch-package": "^6.4.7",
     "pigeon-maps": "^0.19.7",
     "postinstall-postinstall": "^2.1.0",
+    "postprocessing": "^6.30.1",
     "react": "^17.0.2",
     "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
@@ -60,15 +61,14 @@
     "round-slider": "altence/round-slider#refactor/slider",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
-    "three": "0.135.0",
+    "three": "^0.150.1",
     "three-mesh-bvh": "0.5.5",
     "typeface-lato": "^1.1.13",
     "typeface-montserrat": "^1.1.13",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-ifc": "0.0.35",
-    "web-ifc-three": "0.0.117",
-    "web-ifc-viewer": "1.0.134",
+    "web-ifc-viewer-bimchain": "https://github.com/Hilicot/web-ifc-viewer-bimchain",
     "web-vitals": "^1.0.1",
     "web3": "^1.8.2",
     "web3.storage": "^4.4.0",
