--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "echarts": "^5.1.2",
     "echarts-for-react": "^3.0.1",
     "elt-react-credit-cards": "^0.0.1",
+    "frappe-gantt": "^0.6.1",
+    "frappe-gantt-react": "^0.2.2",
     "google-map-react": "^2.1.10",
     "i18next": "^20.4.0",
     "js-file-download": "^0.4.12",
@@ -138,6 +140,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.3.1",
     "rollup": "^3.15.0",
+    "sass": "^1.58.3",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
